# mininet-optical

./: .buildinfo  .fig1.eps.icloud  .fig1.png.icloud  .gitignore  .test_exec 2.py.icloud  3_hop_transmission.eps  4_hop_transmission.eps  API_walkthrough.html  CNAME  INSTALL.md  LICENSE  ML_models.py  Mininet_Optical_Documentation_Draft.html  Mininet_Optical_Introduction.html  Monitor_Lightpath.txt  README.html  README.md  README_AAMIR_RESULTS.md  analyse_per_span_bk.py  api-overview.html  architecture.html  dataplane.py  demo 2021.py  deutsche_telekom.py  dummy_controller.py  dummy_controller_deutsche.py  dummy_interface.py  edfa_params.py  examples  fig1.eps  genindex.html  index.html  link.py  makecerts.sh  makefile  monitoring_ase_no-m-tmp.eps  monitoring_nli_no-m-tmp.eps  monitoring_power_no-m-tmp.eps  network.py  node.py  (+25 more)
.github/: ISSUE_TEMPLATE
Aamir's files/: Final Thesis Data.xlsx  July 27 2021.xlsx
ML_Model_Booster_rd1_co1/: keras_metadata.pb  saved_model.pb
ML_Model_LineAmp1/: keras_metadata.pb  saved_model.pb
ML_Model_Preamp_rd2_co1/: keras_metadata.pb  saved_model.pb
_sources/: Mininet_Optical_Documentation_Draft.md.txt  Mininet_Optical_Introduction.md.txt  README.md.txt  architecture.md.txt  index.rst.txt  walkthrough.md.txt
autoapi/: index.html
cross-validation-tests/: README.md  auto_tests.py  cross_val_test.py  cross_validation.sh
description-files/: change_wdg.py  linear.txt  plot_wdg.py  wdg1.eps  wdg1.txt  wdg1_1.txt  wdg1_2.txt  wdg1_3.txt  wdg1_4.txt  wdg1_5.txt  wdg1_6.txt  wdg1_yeo_johnson.txt  wdg2.eps  wdg2.txt  wdg2_2.txt  (+4 more)
(+2132 files in other folders)
