[metadata]
name = mininet_optical
version = 0.0.0
description = Optical Network Emulator extending Mininet
long_description = file: README.md
long_description_content_type = text/markdown
author = Mininet-Optical Project Contributors
author_email = ''
license = MIT
license_file = LICENSE
classifiers = License :: OSI Approved :: MIT License

[options]
packages =
    mnoptical
    mnoptical.examples
    mnoptical.ofcdemo
    mnoptical.topo
install_requires =
    numpy
    scipy
    bottle
python_requires = >=3.6
